timetrial: spawn boats, freeroam and items